--- a/ImageGallery/css/styles.css
+++ b/ImageGallery/css/styles.css
@@ -6,6 +6,9 @@
 h1, h2, h3, h4, h5, h6, p{ 
 	margin:20px 20px 20px 20px;
 }
+h1 {
+	color: #2C3E4F;
+}
 h1,h4 {
 	text-transform: uppercase;
 }
@@ -26,7 +29,7 @@ hr:nth-of-type(1) {
 	height: 3px;
 	border: #1F85C8;
 	background-color: #1F85C8;
-	margin:0 20px 0 20px;
+	margin:20px 20px 20px 20px;
 }
 
 hr:nth-of-type(2) {
