--- a/Buziness/css/style.css
+++ b/Buziness/css/style.css
@@ -7,8 +7,16 @@ body {
 	font-family: 'Lato', sans-serif;
 	font-size: 13.5px;
 	margin:0 auto 0 auto;
+	/*max-width: 1170px;*/
+}
+main > *{
+	/*max-width: 1170px;*/
+	margin-right: auto;
+	margin-left: auto;
+	/*width: 80%;*/
 }
 header{
+	max-width: 1170px;
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
@@ -60,7 +68,7 @@ h1{
 	color: white;
 }
 
-form {
+.main_container > form {
 	margin-top:20px;
 	text-align: center;
 }
@@ -69,7 +77,7 @@ form {
 	padding-top:100px;
 }
 
-input{
+.main_form input{
 	height: 30px;
 	border:0px;
 	border-radius:2px;
@@ -105,4 +113,19 @@ input{
 	background-repeat: no-repeat;
 	background-position: 5px 50%;
 
+}
+
+.notebook_img_container{
+	text-align: center;
+	position: relative;
+	top: 120px;
+	z-index: 100;
+
+}
+.notebook_img_container .notebook_slider_form{
+	margin-top: 10px;
+}
+
+.services_container{
+	height: 900px;
 }
