--- a/Buziness/css/style.css
+++ b/Buziness/css/style.css
@@ -75,6 +75,8 @@ h1{
 
 .main_container{
 	padding-top:100px;
+	max-width: 1170px;
+	width: 80%;
 }
 
 .main_form input{
@@ -82,7 +84,7 @@ h1{
 	border:0px;
 	border-radius:2px;
 	margin-left:5px;
-	width:180px;
+	width:24%;
 	padding-left: 20px;
 
 }
