starting about us section:

--- a/Buziness/css/style.css
+++ b/Buziness/css/style.css
@@ -77,7 +77,7 @@ h1{
 	max-width: 1170px;
 	/*width: 80%;*/
 }
-main > *{
+main .main_container, main .services_container{
 	width: 80%;
 }
 
@@ -131,7 +131,7 @@ main > *{
 }
 
 .services_container{
-	height: 900px;
+	height: 700px;
 	margin-top:200px;
 	color:#6e6e6e;
 }
@@ -166,4 +166,8 @@ main > *{
 	padding-right: 50px;
 }
 
+.about_us{
+	height: 625px;
+	background-color: #ffc155;
+}
 
