--- a/Buziness/css/style.css
+++ b/Buziness/css/style.css
@@ -212,20 +212,78 @@ a:hover, a:link, a:visited {
 	color:white;
 }
 
-.choose_your_price {
+.choose_price{
 	height: 900px;
 	background-color: #e7edf3;
-	padding-top:135px;
+	padding-top: 10%;
+}
+.choose_price *{
+	width: 80%;
+	margin-right: auto;
+	margin-left: auto;
+}
+.choose_price h2{
+	text-transform: uppercase;
 	text-align: center;
 	color:#394b50;
-}
-
-.choose_your_price h2 {
-	text-transform: uppercase;
 	font-weight: 900;
 }
-
-.choose_your_price h4 {
-	font-weight: 400;
+.choose_price p{
+	font-weight: 300;
+	text-align: center;
 	color:#75888d;
+}
+
+.choose_price_inner{
+	width:30%;
+	height: 500px;
+	background-color: #709dca;
+	border-radius: 5px;
+	margin-top:50px;
+	padding-top: 5%;
+}
+
+.choose_price_inner h2{
+	font-weight: 300;
+	color:white;
+	padding-bottom:35px;
+
+}
+
+.choose_price_inner h1, .choose_price_inner h1 sup {
+	color:white;
+}
+.choose_price_inner h1{
+	font-size: 45px;
+	font-weight: 700;
+}
+.choose_price_inner h1 sup {
+	font-weight: 300;
+}
+
+.choose_price_inner p{
+	color: white;
+	text-transform: uppercase;
+	margin-top:15px;
+	margin-bottom: 15px;
+}
+
+.choose_price_inner hr~p{
+	color:#c2e1ff;
+}
+
+.choose_price_inner hr{
+	height: 1px;
+	border:none;
+	background-color: #c2e1ff;
+}
+
+.choose_price_inner p a{
+	padding:10px;
+	background-color: #ffbb42;
+	border-radius: 5px;
+}
+
+#last_paragraph{
+	margin-bottom: 40px;
 }
