--- a/Buziness/css/style.css
+++ b/Buziness/css/style.css
@@ -6,13 +6,13 @@
 body {
 	font-family: 'Lato', sans-serif;
 	margin:0 auto 0 auto;
+	max-width: 1170px;
 }
 main > *{
 	margin-right: auto;
 	margin-left: auto;
 }
 header{
-	/*max-width: 1170px;*/
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
