--- a/Buziness/css/style.css
+++ b/Buziness/css/style.css
@@ -6,7 +6,8 @@
 body {
 	font-family: 'Lato', sans-serif;
 	margin:0 auto 0 auto;
-	max-width: 1170px;
+	/*max-width: 1170px;*/
+	width: 80%;
 }
 main > *{
 	margin-right: auto;
@@ -25,8 +26,9 @@ header{
 .container {
 	/*background-color: white;*/
 	width: 80%;
-	margin-left: auto;
+/*	margin-left: auto;
 	margin-right: auto;
+	text-align: center;*/
 	height: 70px;
 }
 .container > * {
